notebook now complete to creation of vcf file for mutant and added relevant files and scripts for this

--- a/simulated_data/prepare_read_counts_stats.ipynb
+++ b/simulated_data/prepare_read_counts_stats.ipynb
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9c876cc3-0795-40e6-8d9e-f11372cab460",
    "metadata": {
     "tags": []
@@ -725,12 +725,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "51e781cd-c5c9-4637-a499-36e5651ba811",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>panel</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GRC1</td>\n",
+       "      <td>907</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GRC2</td>\n",
+       "      <td>907</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SPEC</td>\n",
+       "      <td>907</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  panel  count\n",
+       "0  GRC1    907\n",
+       "1  GRC2    907\n",
+       "2  SPEC    907"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "counts_df.groupby('panel').size().to_frame('count').reset_index()"
    ]
@@ -746,12 +803,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f0d717a1-8d71-437f-b92a-49f61f00f6cd",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"6\" halign=\"left\">count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "      <th>q25</th>\n",
+       "      <th>q50</th>\n",
+       "      <th>q75</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>panel</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>GRC1</th>\n",
+       "      <td>33917.249173</td>\n",
+       "      <td>18</td>\n",
+       "      <td>96442</td>\n",
+       "      <td>25568.5</td>\n",
+       "      <td>32424.0</td>\n",
+       "      <td>40281.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GRC2</th>\n",
+       "      <td>33500.464168</td>\n",
+       "      <td>21</td>\n",
+       "      <td>78617</td>\n",
+       "      <td>26732.5</td>\n",
+       "      <td>32519.0</td>\n",
+       "      <td>39864.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SPEC</th>\n",
+       "      <td>1291.057332</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17924</td>\n",
+       "      <td>654.5</td>\n",
+       "      <td>988.0</td>\n",
+       "      <td>1445.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              count                                      \n",
+       "               mean min    max      q25      q50      q75\n",
+       "panel                                                    \n",
+       "GRC1   33917.249173  18  96442  25568.5  32424.0  40281.5\n",
+       "GRC2   33500.464168  21  78617  26732.5  32519.0  39864.5\n",
+       "SPEC    1291.057332   0  17924    654.5    988.0   1445.5"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def q25(x):\n",
     "    return x.quantile(0.25)\n",
@@ -793,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "19cf1db4-fe4b-44a4-99c1-4400d2d47f2a",
    "metadata": {
     "tags": []
@@ -818,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "19353f64-97d0-480a-8ebb-9f1327488aa2",
    "metadata": {
     "tags": []
@@ -855,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7d27fe78-082c-4f89-928a-358206b71e51",
    "metadata": {
     "tags": []
@@ -867,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "4b784ca2-82b6-4f23-9a42-8abb263b63bc",
    "metadata": {
     "tags": []
@@ -887,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "76312dd6-8979-42e4-af23-78ea17ea3aaf",
    "metadata": {
     "tags": []
@@ -907,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "eb2d703e-f356-4e53-bf86-207b09c497de",
    "metadata": {
     "tags": []
@@ -919,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "7d44be3a-997c-4966-946f-70cccb6b4ac4",
    "metadata": {
     "tags": []
@@ -931,12 +1080,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "41dff90d-2c24-4064-a629-b13eb30a037c",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#CHROM</th>\n",
+       "      <th>START</th>\n",
+       "      <th>END</th>\n",
+       "      <th>DESC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Pf_M76611</td>\n",
+       "      <td>88</td>\n",
+       "      <td>314</td>\n",
+       "      <td>SPEC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Pf_M76611</td>\n",
+       "      <td>1637</td>\n",
+       "      <td>1892</td>\n",
+       "      <td>SPEC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Pf3D7_01_v3</td>\n",
+       "      <td>145386</td>\n",
+       "      <td>145590</td>\n",
+       "      <td>GRC1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Pf3D7_01_v3</td>\n",
+       "      <td>179274</td>\n",
+       "      <td>179471</td>\n",
+       "      <td>GRC2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Pf3D7_01_v3</td>\n",
+       "      <td>180439</td>\n",
+       "      <td>180683</td>\n",
+       "      <td>GRC1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132</th>\n",
+       "      <td>Pf3D7_14_v3</td>\n",
+       "      <td>2480904</td>\n",
+       "      <td>2481116</td>\n",
+       "      <td>GRC1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>133</th>\n",
+       "      <td>Pf3D7_14_v3</td>\n",
+       "      <td>2625793</td>\n",
+       "      <td>2626011</td>\n",
+       "      <td>GRC2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>134</th>\n",
+       "      <td>Pf3D7_14_v3</td>\n",
+       "      <td>2733564</td>\n",
+       "      <td>2733803</td>\n",
+       "      <td>GRC1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135</th>\n",
+       "      <td>Pf3D7_14_v3</td>\n",
+       "      <td>3045934</td>\n",
+       "      <td>3046141</td>\n",
+       "      <td>GRC2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>Pf3D7_14_v3</td>\n",
+       "      <td>3126025</td>\n",
+       "      <td>3126256</td>\n",
+       "      <td>GRC1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>136 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          #CHROM    START      END  DESC\n",
+       "0      Pf_M76611       88      314  SPEC\n",
+       "1      Pf_M76611     1637     1892  SPEC\n",
+       "2    Pf3D7_01_v3   145386   145590  GRC1\n",
+       "3    Pf3D7_01_v3   179274   179471  GRC2\n",
+       "4    Pf3D7_01_v3   180439   180683  GRC1\n",
+       "..           ...      ...      ...   ...\n",
+       "132  Pf3D7_14_v3  2480904  2481116  GRC1\n",
+       "133  Pf3D7_14_v3  2625793  2626011  GRC2\n",
+       "134  Pf3D7_14_v3  2733564  2733803  GRC1\n",
+       "135  Pf3D7_14_v3  3045934  3046141  GRC2\n",
+       "136  Pf3D7_14_v3  3126025  3126256  GRC1\n",
+       "\n",
+       "[136 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "panel_df"
    ]
@@ -951,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6955b22d-26d9-406d-a2bb-6af200127279",
    "metadata": {
     "tags": []
@@ -965,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "692521b7-b326-4c09-abd4-d93d1e8b726a",
    "metadata": {
     "tags": []
@@ -976,6 +1257,137 @@
     "grc1_panel_df.to_csv('SpotMalaria-GRC1_Pf_amplicon_primers.bed', index=False)\n",
     "grc2_panel_df.to_csv('SpotMalaria-GRC2_Pf_amplicon_primers.bed', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8c339af-40a3-4e4a-90cd-ad41c956541e",
+   "metadata": {},
+   "source": [
+    "## Reference genome and annotation\n",
+    "The read simulation pipeline requires a reference genome. The _P. falciparum_ 3D7 reference genome was obtained from \n",
+    "https://plasmodb.org/common/downloads/Current_Release/Pfalciparum3D7/fasta/data/PlasmoDB-68_Pfalciparum3D7_Genome.fasta\n",
+    "and is provided in this folder.  \n",
+    "In addition, a GFF genome annotation file is required for the next step, creating a variant file. It was obtained from \n",
+    "https://plasmodb.org/a/service/raw-files/release-68/Pfalciparum3D7/gff/data/PlasmoDB-68_Pfalciparum3D7.gff and is also provided in this folder.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86b493f0-22b4-4ad8-94e6-818650906621",
+   "metadata": {},
+   "source": [
+    "## Variant file\n",
+    "This section creates an example variants file for the read simulation pipeline. It can be used to simulate a run of the SpotMalaria panel with a genome that carries a resistance genotype. The simulation pipeline requires a vcf-like file with SNP data in order to create a mutant genome from the reference WT.\n",
+    "\n",
+    "As pointed out in the introduction, this is intended as a template for creating tailor-made simulated read datasets. In this example, reads will be created to simulate a chloroquine resistance encoded in the crt gene (PF3D7_0709000). This could be used to verify that a pipeline correctly calls this mutation and the resistance phenotype from the simulated read data.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70fc3489-7395-480f-8570-788ec787792e",
+   "metadata": {},
+   "source": [
+    "Drug-resistance genotypes are recorded in the Pf8_resistance_classification.pdf file available [here](https://pf8-release.cog.sanger.ac.uk/Pf8_resistance_classification.pdf).  \n",
+    "\n",
+    "According to page 3 of this document, the mutation PF3D7_0709000:K76T leads to chloroquine resistance.  \n",
+    "\n",
+    "To create the variants (vcf-like) file for the simualtion pipeline, we need to convert this aminoacid position into a genome position and apply a SNP at DNA level.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a92d3eef-813f-4693-8dd9-67106b060741",
+   "metadata": {},
+   "source": [
+    "A python module is provided in this folder, which can be used stand-alone but will be used via imported functions here in order to convert from gene/AA to genomic NA coordinates via a GFF annotation file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "cb55aaba-c2d5-4a26-a75f-af4620127c46",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from snp2mutant_coords import find_cds_for_gene, aa_to_genomic_from_exons, sequence_for_pos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "fb9f56f1-511a-4001-a893-c7553c26489a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PF3D7_0709000 AA pos 76 = genomic position (1-based) Pf3D7_07_v3:403624-403626\n"
+     ]
+    }
+   ],
+   "source": [
+    "gene_id='PF3D7_0709000'\n",
+    "aa_pos=76\n",
+    "gff_file='PlasmoDB-68_Pfalciparum3D7.gff'\n",
+    "\n",
+    "chrom, strand, exons, diagnostics = find_cds_for_gene(gff_file, gene_id)\n",
+    "start, end = aa_to_genomic_from_exons(exons, aa_pos, strand)\n",
+    "\n",
+    "print(f'{gene_id} AA pos {str(aa_pos)} = genomic position (1-based) {chrom}:{str(start)}-{str(end)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "322d20a0-a5b6-46f4-b1b8-e96227242bf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sequence at Pf3D7_07_v3:403624-403626:AAA\n"
+     ]
+    }
+   ],
+   "source": [
+    "seq=sequence_for_pos(\n",
+    "    'PlasmoDB-68_Pfalciparum3D7_Genome.fasta',\n",
+    "    chrom, \n",
+    "    strand,\n",
+    "    start,\n",
+    "    end)\n",
+    "print(f'sequence at {chrom}:{str(start)}-{str(end)}:{seq}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fc66e66-f616-4aa4-a0d9-afa23c3d7df6",
+   "metadata": {},
+   "source": [
+    "__RESULT:__ \n",
+    "To create the chloroquine resistance mutaion PF3D7_0709000:K76T, codon 'AAA' at genomic position f3D7_07_v3:403624-403626 (encoding Lys/K) needs to be changed to 'ACA' to encode Thr/T.  \n",
+    "\n",
+    "The vcf-like file for this mutation looks like this:\n",
+    "```\n",
+    "#CHROM\tPOS\tREF\tALT\n",
+    "Pf3D7_07_v3\t403625\tA\tC\n",
+    "```\n",
+    "This has been saved in this folder as file ```Pf3D7_07_v3_403625_a2c```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b77c6c28-5d6f-483c-a8c8-563945a2b07b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
