added reference for codon usage

--- a/simulated_data/prepare_read_counts_stats.ipynb
+++ b/simulated_data/prepare_read_counts_stats.ipynb
@@ -1371,7 +1371,7 @@
    "metadata": {},
    "source": [
     "__RESULT:__ \n",
-    "To create the chloroquine resistance mutaion PF3D7_0709000:K76T, codon 'AAA' at genomic position f3D7_07_v3:403624-403626 (encoding Lys/K) needs to be changed to 'ACA' to encode Thr/T.  \n",
+    "To create the chloroquine resistance mutaion PF3D7_0709000:K76T, codon 'AAA' at genomic position f3D7_07_v3:403624-403626 (encoding Lys/K) needs to be changed to 'ACA' to encode Thr/T. For reference see https://en.wikipedia.org/wiki/DNA_and_RNA_codon_tables.  \n",
     "\n",
     "The vcf-like file for this mutation looks like this:\n",
     "```\n",
@@ -1380,14 +1380,6 @@
     "```\n",
     "This has been saved in this folder as file ```Pf3D7_07_v3_403625_a2c```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b77c6c28-5d6f-483c-a8c8-563945a2b07b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
