added haplotypes manifest

--- a/simulated_data/prepare_read_counts_stats.ipynb
+++ b/simulated_data/prepare_read_counts_stats.ipynb
@@ -1263,7 +1263,7 @@
    "id": "d8c339af-40a3-4e4a-90cd-ad41c956541e",
    "metadata": {},
    "source": [
-    "## Reference genome and annotation\n",
+    "### Reference genome and annotation\n",
     "The read simulation pipeline requires a reference genome. The _P. falciparum_ 3D7 reference genome was obtained from \n",
     "https://plasmodb.org/common/downloads/Current_Release/Pfalciparum3D7/fasta/data/PlasmoDB-68_Pfalciparum3D7_Genome.fasta\n",
     "and is provided in this folder.  \n",
@@ -1276,7 +1276,7 @@
    "id": "86b493f0-22b4-4ad8-94e6-818650906621",
    "metadata": {},
    "source": [
-    "## Variant file\n",
+    "### Variant file\n",
     "This section creates an example variants file for the read simulation pipeline. It can be used to simulate a run of the SpotMalaria panel with a genome that carries a resistance genotype. The simulation pipeline requires a vcf-like file with SNP data in order to create a mutant genome from the reference WT.\n",
     "\n",
     "As pointed out in the introduction, this is intended as a template for creating tailor-made simulated read datasets. In this example, reads will be created to simulate a chloroquine resistance encoded in the crt gene (PF3D7_0709000). This could be used to verify that a pipeline correctly calls this mutation and the resistance phenotype from the simulated read data.  "
@@ -1379,6 +1379,30 @@
     "Pf3D7_07_v3\t403625\tA\tC\n",
     "```\n",
     "This has been saved in this folder as file ```Pf3D7_07_v3_403625_a2c```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67417a6a-fac2-415c-bdcb-ab84aef7fcbe",
+   "metadata": {},
+   "source": [
+    "### Simulation pipeline final input files\n",
+    "With the file created so far in this section, we are now able to create the final input files for a run of the [read simulation pipeline](https://github.com/ISOinaBox/iib_readsim).  \n",
+    "#### Haplotype manifest\n",
+    "According to the [pipeline manual](https://github.com/ISOinaBox/iib_readsim/blob/main/README.md), a \"haplotype manifest\" csv file is required to configure the reference genome(s) on which to create simulated reads. As we have three primer panels and two genotypes (WT and crt mutant), we need one line per genotype and primer panel in the manifest as shown here and saved as file ```hap_manifest_example.csv``` in this folder:  \n",
+    "```\n",
+    "haplotype,base_fasta,variants_file,bed_file\n",
+    "wt_spec,PlasmoDB-68_Pfalciparum3D7_Genome.fasta,null,SpotMalaria-SPEC_Pf_amplicon_primers.bed\n",
+    "wt_grc1,PlasmoDB-68_Pfalciparum3D7_Genome.fasta,null,SpotMalaria-GRC1_Pf_amplicon_primers.bed\n",
+    "wt_grc2,PlasmoDB-68_Pfalciparum3D7_Genome.fasta,null,SpotMalaria-GRC2_Pf_amplicon_primers.bed\n",
+    "crtmut_spec,PlasmoDB-68_Pfalciparum3D7_Genome.fasta,Pf3D7_07_v3_403625_a2c,SpotMalaria-SPEC_Pf_amplicon_primers.bed\n",
+    "crtmut_grc1,PlasmoDB-68_Pfalciparum3D7_Genome.fasta,Pf3D7_07_v3_403625_a2c,SpotMalaria-GRC1_Pf_amplicon_primers.bed\n",
+    "crtmut_grc2,PlasmoDB-68_Pfalciparum3D7_Genome.fasta,Pf3D7_07_v3_403625_a2c,SpotMalaria-GRC2_Pf_amplicon_primers.bed\n",
+    "```\n",
+    "\n",
+    "__Explanation of the file__:  \n",
+    "Line 1 configures a WT genotype, using the 3D7 genome provided in this folder. The value in the 'variants_file' column is 'none' because we use the 3D7 genome as-is. The 'bed_file' is the file created earlier, providing positions of the primers in the SpotMalaria SPEC sub-panel.  Lines 2 and 3 do the same but refer to the GRC1 and GRC2 bed files, respectively.  \n",
+    "Lines 4-6 configure the mutant genotype for the crt mutation as discussed in detail in the previous section. Here, we use the same 3D7 reference genome, but provide the vcf-like file for a single SNP that re-creates the resistant mutant, which was produced in the previous section. The bed (primer position) files are the same as for lines 1-3.  "
    ]
   }
  ],
