added information about sample manifest in notebook

--- a/simulated_data/prepare_read_counts_stats.ipynb
+++ b/simulated_data/prepare_read_counts_stats.ipynb
@@ -1402,7 +1402,129 @@
     "\n",
     "__Explanation of the file__:  \n",
     "Line 1 configures a WT genotype, using the 3D7 genome provided in this folder. The value in the 'variants_file' column is 'none' because we use the 3D7 genome as-is. The 'bed_file' is the file created earlier, providing positions of the primers in the SpotMalaria SPEC sub-panel.  Lines 2 and 3 do the same but refer to the GRC1 and GRC2 bed files, respectively.  \n",
-    "Lines 4-6 configure the mutant genotype for the crt mutation as discussed in detail in the previous section. Here, we use the same 3D7 reference genome, but provide the vcf-like file for a single SNP that re-creates the resistant mutant, which was produced in the previous section. The bed (primer position) files are the same as for lines 1-3.  "
+    "Lines 4-6 configure the mutant genotype for the crt mutation as discussed in detail in the previous section. Here, we use the same 3D7 reference genome, but provide the vcf-like file for a single SNP that re-creates the resistant mutant, which was produced in the previous section. The bed (primer position) files are the same as for lines 1-3. \n",
+    "\n",
+    "#### Sample manifest\n",
+    "The sample manifest file defines the samples that are to be simulated. Each sample can contain one or more haplotypes, as defined in the above haplotype manifest file. This would enable the simulation of mixed WT/mutant samples, which could be used to test the robustness of a pipeline for heterozygous results.  \n",
+    "In the example provided here, we are not creating such mixed samples. Instead, we configure the pipeline to create one sample for each genotype (WT/mut) and for each primer sub-panel.  \n",
+    "The read numbers are taken from the earlier analysis of real-world read counts in this notebook. For each genotype/primer-panel combination, we simulate one run each with the 25, 50 and 75 quantile of read counts from part 1 of this notebook.  \n",
+    "The final file, which is available in this folder as ```sample_manifest_example.json``` has the following content:  \n",
+    "```\n",
+    "[\n",
+    "    {\n",
+    "        \"sample_id\": \"crtmut_spec_q25\", \n",
+    "        \"genotypes\": [\"wt_spec\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 654\n",
+    "    },\n",
+    "    {\n",
+    "        \"sample_id\": \"wt_spec_q50\", \n",
+    "        \"genotypes\": [\"wt_spec\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 988\n",
+    "    },\n",
+    "    {\n",
+    "        \"sample_id\": \"wt_spec_q75\", \n",
+    "        \"genotypes\": [\"wt_spec\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 1445\n",
+    "    },\n",
+    "    {\n",
+    "        \"sample_id\": \"wt_grc1_q25\", \n",
+    "        \"genotypes\": [\"wt_spec\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 25568\n",
+    "    },\n",
+    "    {\n",
+    "        \"sample_id\": \"wt_grc1_q50\", \n",
+    "        \"genotypes\": [\"wt_spec\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 32424\n",
+    "    },\n",
+    "    {\n",
+    "        \"sample_id\": \"wt_grc1_q75\", \n",
+    "        \"genotypes\": [\"wt_spec\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 40281\n",
+    "    },\n",
+    "        {\n",
+    "        \"sample_id\": \"wt_grc2_q25\", \n",
+    "        \"genotypes\": [\"wt_spec\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 26732\n",
+    "    },\n",
+    "    {\n",
+    "        \"sample_id\": \"wt_grc2_q50\", \n",
+    "        \"genotypes\": [\"wt_spec\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 32519\n",
+    "    },\n",
+    "    {\n",
+    "        \"sample_id\": \"wt_grc2_q75\", \n",
+    "        \"genotypes\": [\"wt_spec\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 39864\n",
+    "    },\n",
+    "\n",
+    "    {\n",
+    "        \"sample_id\": \"crtmut_spec_q25\", \n",
+    "        \"genotypes\": [\"crtmut_spec\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 654\n",
+    "    },\n",
+    "    {\n",
+    "        \"sample_id\": \"crtmut_spec_q50\", \n",
+    "        \"genotypes\": [\"crtmut_spec\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 988\n",
+    "    },\n",
+    "    {\n",
+    "        \"sample_id\": \"crtmut_spec_q75\", \n",
+    "        \"genotypes\": [\"crtmut_spec\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 1445\n",
+    "    },\n",
+    "    {\n",
+    "        \"sample_id\": \"crtmut_grc1_q25\", \n",
+    "        \"genotypes\": [\"crtmut_spec\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 25568\n",
+    "    },\n",
+    "    {\n",
+    "        \"sample_id\": \"crtmut_grc1_q50\", \n",
+    "        \"genotypes\": [\"crtmut_spec\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 32424\n",
+    "    },\n",
+    "    {\n",
+    "        \"sample_id\": \"crtmut_grc1_q75\", \n",
+    "        \"genotypes\": [\"crtmut_spec\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 40281\n",
+    "    },\n",
+    "        {\n",
+    "        \"sample_id\": \"crtmut_grc2_q25\", \n",
+    "        \"genotypes\": [\"crtmut_spec\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 26732\n",
+    "    },\n",
+    "    {\n",
+    "        \"sample_id\": \"crtmut_grc2_q50\", \n",
+    "        \"genotypes\": [\"crtmut_spec\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 32519\n",
+    "    },\n",
+    "    {\n",
+    "        \"sample_id\": \"crtmut_grc2_q75\", \n",
+    "        \"genotypes\": [\"crtmut_spec\"], \n",
+    "        \"proportions\": [1], \n",
+    "        \"num_reads\": 39864\n",
+    "    }\n",
+    "\n",
+    "]\n",
+    "\n",
+    "```\n",
+    "As an example, sample \"crtmut_grc2_q75\" uses the crt mutant genotype to simulate a run of the GRC2 panel with 39864 rea"
    ]
   }
  ],
