add content of sample manifest to notebook

--- a/simulated_data/prepare_read_counts_stats.ipynb
+++ b/simulated_data/prepare_read_counts_stats.ipynb
@@ -1524,7 +1524,7 @@
     "]\n",
     "\n",
     "```\n",
-    "As an example, sample \"crtmut_grc2_q75\" uses the crt mutant genotype to simulate a run of the GRC2 panel with 39864 rea"
+    "As an example, sample \"crtmut_grc2_q75\" uses the crt mutant genotype to simulate a run of the GRC2 panel with 39864 reads, which is the 75 quantile read count for the GRC2 panel as calculated from real-world data in part 1 of this notebook."
    ]
   }
  ],
