--- a/simulated_data/prepare_files_for_simulation.ipynb
+++ b/simulated_data/prepare_files_for_simulation.ipynb
@@ -8,7 +8,7 @@
     "# Prepartion for creating simulated data\n",
     "## Aim of this notebook\n",
     "This notebook contains the preparation required to run read simulations using the read simulation pipeline published in this repository.  \n",
-    "The main aim of this notebook is to provide a working recipe for a read simulation run that is based on real-world data. In contrast to whole-genome data, for which real-world datasets are readily availble from the [Pf8 resource](https://www.malariagen.net/resource/36/), amplicon data for a pipeline that may have been developed for a specific amplicon primer panel, my not be available from public resources. In this case, simulating reads may be the only option for pipeline validation. Use this notebook as a guideline on how to generate the input files for a read simulation pipeline run."
+    "The main aim of this notebook is to provide a working recipe for a read simulation run that is based on real-world data. In contrast to whole-genome data, for which real-world datasets are readily availble from the [Pf8 resource](https://www.malariagen.net/resource/36/), amplicon data for a pipeline that may have been developed for a specific amplicon primer panel, my not be available from public resources. In this case, simulating reads may be the only option for pipeline validation. Use this notebook as a guideline on how to generate the input files for a run of the \"pop_var_sim\" read simulation pipeline, provided in a [separate repository](https://github.com/ISOinaBox/pop_var_sim)."
    ]
   },
   {
@@ -927,7 +927,7 @@
    "metadata": {},
    "source": [
     "## Part 2: Configuring the read simulation pipeline\n",
-    "The [read simulation pipeline](https://github.com/ISOinaBox/iib_readsim) requires a set of input files to configure the simulation run. This part is about creating these files."
+    "The [read simulation pipeline](https://github.com/ISOinaBox/pop_var_sim) requires a set of input files to configure the simulation run. This part is about creating these files."
    ]
   },
   {
@@ -1387,7 +1387,7 @@
    "metadata": {},
    "source": [
     "### Simulation pipeline final input files\n",
-    "With the file created so far in this section, we are now able to create the final input files for a run of the [read simulation pipeline](https://github.com/ISOinaBox/iib_readsim).  \n",
+    "With the file created so far in this section, we are now able to create the final input files for a run of the [read simulation pipeline](https://github.com/ISOinaBox/pop_var_sim).  \n",
     "#### Haplotype manifest\n",
     "According to the [pipeline manual](https://github.com/ISOinaBox/iib_readsim/blob/main/README.md), a \"haplotype manifest\" csv file is required to configure the reference genome(s) on which to create simulated reads. As we have three primer panels and two genotypes (WT and crt mutant), we need one line per genotype and primer panel in the manifest as shown here and saved as file ```hap_manifest_example.csv``` in this folder:  \n",
     "```\n",
