--- a/simulated_data/prepare_simulation_run/scripts/prepare_files_for_simulation.ipynb
+++ b/simulated_data/prepare_simulation_run/scripts/prepare_files_for_simulation.ipynb
@@ -5,10 +5,15 @@
    "id": "5e0088e6-1fc9-4e89-bfdc-3490c7385928",
    "metadata": {},
    "source": [
-    "# Prepartion for creating simulated data\n",
+    "# Preparation for creating simulated data\n",
     "## Aim of this notebook\n",
-    "This notebook contains the preparation required to run read simulations using the read simulation pipeline published in this repository.  \n",
-    "The main aim of this notebook is to provide a working recipe for a read simulation run that is based on real-world data. In contrast to whole-genome data, for which real-world datasets are readily availble from the [Pf8 resource](https://www.malariagen.net/resource/36/), amplicon data for a pipeline that may have been developed for a specific amplicon primer panel, my not be available from public resources. In this case, simulating reads may be the only option for pipeline validation. Use this notebook as a guideline on how to generate the input files for a run of the \"pop_var_sim\" read simulation pipeline, provided in a [separate repository](https://github.com/ISOinaBox/pop_var_sim)."
+    "This notebook contains the preparation required to run amplicon-sequencing (AmpSeq) read simulations using the read simulation pipeline \"pop_var_sim\", provided in a [separate repository](https://github.com/ISOinaBox/pop_var_sim).  \n",
+    "\n",
+    "While the files produced in this notebook can be used to create simulated reads, the main use of this notebook is to serve as a template and guide for generating simulation runs, tailor-made for a pipeline that is to be validated.  \n",
+    "\n",
+    "In part 1 of this notebook, we obtain read counts from high-quality public data. This step is necessary for any simulation, so that the generated data provides realistic input for an analysis pipeline. Here, we simulate a [SpotMalaria](https://ngs.sanger.ac.uk/production/malaria/Resource/29/20200705-GenRe-04a-SpotMalaria-0.39.pdf) AmpSeq run, for which real-world samples exist in public repositories. This may not always be the case for simulating different AmpSeq primer panel runs, in which case the user may need to estimate realistic read counts in different ways.\n",
+    "\n",
+    "In part 2, the simulation run input files are created. This demonstrates how genome data and publicly available data on relevant mutations can be used to simulate WT and mutant strain results and should be modified according to the validation that is to be carried out. For example, a new pipeline might need to be tested in terms of how robustly it can call a mutant allele in a mix of WT and mutant parasites, which can be configured in the simulation pipeline run. "
    ]
   },
   {
