--- a/simulated_data/prepare_simulation_run/scripts/prepare_files_for_simulation.ipynb
+++ b/simulated_data/prepare_simulation_run/scripts/prepare_files_for_simulation.ipynb
@@ -11,9 +11,11 @@
     "\n",
     "While the files produced in this notebook can be used to create simulated reads, the main use of this notebook is to serve as a template and guide for generating simulation runs, tailor-made for a pipeline that is to be validated.  \n",
     "\n",
+    "This notebook focuses on AmpSeq data because simulated data is particularly useful for this type of data. Whole-genome data for pipeline validataion can be obtained from real-world datasets that are readily available [from public resources](https://www.malariagen.net/resource/36/). AmpSeq data, on the other hand, depends on a specific primer panel, for which data may not be readily available. In addition, a pipeline written and validated for a spe\n",
+    "\n",
     "In part 1 of this notebook, we obtain read counts from high-quality public data. This step is necessary for any simulation, so that the generated data provides realistic input for an analysis pipeline. Here, we simulate a [SpotMalaria](https://ngs.sanger.ac.uk/production/malaria/Resource/29/20200705-GenRe-04a-SpotMalaria-0.39.pdf) AmpSeq run, for which real-world samples exist in public repositories. This may not always be the case for simulating different AmpSeq primer panel runs, in which case the user may need to estimate realistic read counts in different ways.\n",
     "\n",
-    "In part 2, the simulation run input files are created. This demonstrates how genome data and publicly available data on relevant mutations can be used to simulate WT and mutant strain results and should be modified according to the validation that is to be carried out. For example, a new pipeline might need to be tested in terms of how robustly it can call a mutant allele in a mix of WT and mutant parasites, which can be configured in the simulation pipeline run. "
+    "In part 2, the simulation run input files are created. This demonstrates how genome data and publicly available data on relevant mutations can be used to simulate WT and mutant strain results and should be modified according to the validation that is to be carried out. For example, a new pipeline might need to be tested in terms of how robustly it can call a mutant allele in a mix of WT and mutant parasites, which can be configured in the simulation pipeline run.  "
    ]
   },
   {
@@ -29,7 +31,7 @@
     "This primer panel consists of three sub-panels: SPEC (speciation), GRC1 and GRC2.  \n",
     "The data for these panels is provided in [this spreadsheet](https://www.malariagen.net/wp-content/uploads/2023/11/20200705-GenRe-04b-SpotMalaria-SupplementaryFile1.xls).  \n",
     "\n",
-    "The notebook and data provided here is not intended to be used as-is, but to serve as a template for creating custom simulated datasets, tailored to the pipeline that is to be tested. That said, you are welcome to use the data produced here for your own pipeline, if you wish.  "
+    "As noted in the introduction, this analysis is specific to the SpotMalaria AmpSeq primer panel and will need to be modified - based on the template provided here - to accommodate other AmpSeq panels or whole-genome data.  "
    ]
   },
   {
